fixed text-wrap on smaller container size

--- a/src/app/modules/ui-elements/folder-tree/folder-tree.component.scss
+++ b/src/app/modules/ui-elements/folder-tree/folder-tree.component.scss
@@ -11,4 +11,7 @@ ul {
   list-style-type: none;
   padding: 0;
 }
+ * li {
+ text-wrap: nowrap;
+}
 
